# kiuc_college

./: .env.dist  .gitignore  LICENSE  package-lock.json  pyproject.toml
apps/core/: admin.py  apps.py  models.py  sitemaps.py  translation.py  urls.py  views.py
apps/core/migrations/: 0001_initial.py  0002_alter_cooperation_file_alter_documentfile_file.py  0003_internationalcooperation_and_more.py  0004_eduprocess_internationalcooperation_file_and_more.py  0005_receptionpage.py
apps/core/templates/: cooperation.html  (+7 more)
apps/employee/: admin.py  apps.py  models.py  urls.py  views.py
apps/feedback/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/news/: admin.py  apps.py  feeds.py  models.py  translation.py  urls.py  views.py
apps/specialty/: __init__.py  admin.py  apps.py  models.py  translation.py  urls.py  views.py
apps/student/: admin.py  models.py  translation.py  urls.py  views.py
common/: constants.py  context_processors.py  imagegenerators.py  managers.py  upload_to_files.py  utils.py
config/: settings.py  urls.py
config/deploy/: DEPLOY.md  backup.cron  celery_college_worker.conf  college.kiuc.kg.conf  gunicorn.conf.py
scripts/: backup_db.sh
static/css/: LineIcons.2.0.css  core.min.css  font-awesome.min.css  google_fonds.css  responsive.min.css
static/gulp/: gulpfile.js  package-lock.json  package.json
static/js/: core-slider.js  font-awesome.min.js  main.js  menu.js
static/sass/: core.scss  responsive.scss
static/tailwind/: input.css
templates/: 404.html  500.html  base.html
templates/base/: _breadcrumbs.html  _pagination.html  base.html  footer.html  links.html  menu.html  scripts.html
(+85 files in other folders)
