[tool.poetry]
name = "kiuc-college"
version = "0.1.0"
description = ""
authors = ["Nursultan301 <abykeevnursultan14@gmail.com>"]
readme = "README.md"
packages = [{include = "kiuc_college"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
