[project]
name = "kiuc-college"
version = "0.1.0"
description = "КИУК — Кыргызско-Корейский колледж. Публичный сайт."
requires-python = ">=3.10,<4.0"
authors = [
    {name = "WayupKG", email = "adikgk232323@gmail.com"},
]
dependencies = [
    "django==4.2",
    "transliterate>=1.10.2,<2.0.0",
    "django-imagekit>=4.1.0,<5.0.0",
    "django-ckeditor>=6.7.0,<7.0.0",
    "pillow==10.2.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "django-modeltranslation>=0.18.9,<0.19.0",
    "gunicorn>=22.0.0,<24.0.0",
    "psycopg2-binary>=2.9.6,<3.0.0",
    "django-cleanup>=7.0.0,<8.0.0",
    "mypy>=1.11",
]

[tool.uv]
package = false
